# proxysss

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  TARGET.md  benchmark-linux.md  build.cmd  caddy-to-proxysss.md  cluster-automation-internal.md  deploy.cmd  nginx-to-proxysss.md  proxysss-script.d.ts  run.cmd  test.cmd  todo.md  ts-how-to-use.md
.github/skills/github-actions/: SKILL.md
.github/skills/github-actions/references/: validation.md
.github/workflows/: benchmark.yml  ci.yml  deploy.yml  performance.yml  release.yml
docker/: benchmark-controller.Dockerfile  isolated-websocket-bench.Dockerfile  ubuntu24-bench.Dockerfile
docs/: 404.html  AGENT-API.md  ARCHITECTURE.md  BENCHMARK-ubuntu24-vs-nginx.md  CONFIGURATION.md  IMPROVEMENT-BACKLOG.md  PRODUCTION-HARDENING.md  SECURITY.md  architecture.html  benchmark-linux.html  caddy-to-proxysss.html  configuration.html  index.html  nginx-to-proxysss.html  ts-how-to-use.html
examples/: ai-proxy.example.yaml  all-scenarios.example.yaml  game-scale.example.yaml  gateway.ts  iot-mqtt.example.yaml
examples/demo/: README.md
examples/lab/: README.md  gateway.ts  proxysss.acme.example.yaml  proxysss.yaml  start-lab.ps1  start-services.ps1  stop-lab.ps1  stop-services.ps1  verify-lab.ps1
examples/lab-proxysss/: README.md  acme.example.yaml  lab-backends.include.yaml  verify-proxy.ps1
examples/plugins/: ai-api-compat.plugin.yaml  ai-api-compat.ts  geo-headers.plugin.yaml  geo-headers.ts  player-affinity.ts  structured-log.ts  traffic-stats.ts
performance-evidence/: README.md
performance-evidence/development/: README.md
performance-evidence/development/local-docker/: INDEX.tsv
performance-evidence/development/local-docker/20260715T013317Z-2518dca6f297/: host-fingerprint.txt
performance-evidence/development/local-docker/20260715T013625Z-a47f70324ce4/: host-fingerprint.txt
performance-evidence/development/local-docker/20260715T014022Z-52f7bba6a14f/: host-fingerprint.txt
performance-evidence/development/local-docker/20260715T014057Z-f551b6d032eb/: host-fingerprint.txt
performance-evidence/development/local-docker/20260715T014145Z-ba7714b255fd/: host-fingerprint.txt
performance-evidence/development/local-docker/20260715T014505Z-967470643a7a/: host-fingerprint.txt
performance-evidence/development/local-docker/20260715T015446Z-aa565081c62d/: host-fingerprint.txt
performance-evidence/development/local-docker/20260715T020038Z-068de4cadd02/: host-fingerprint.txt
performance-evidence/development/local-docker/20260715T020756Z-ae858d8eccf6/: host-fingerprint.txt  validation-timing.txt
performance-evidence/development/local-docker/20260715T021303Z-0180deb4aea9/: host-fingerprint.txt  validation-timing.txt
performance-evidence/development/local-docker/20260715T022209Z-852f72c36f5a/: host-fingerprint.txt  validation-timing.txt
performance-evidence/development/local-docker/20260715T023010Z-42117b5eff18/: host-fingerprint.txt  validation-timing.txt
performance-evidence/development/local-docker/20260715T023643Z-76b1f39b6b3e/: host-fingerprint.txt  validation-timing.txt
performance-evidence/development/local-docker/20260715T024243Z-3998582ad398/: host-fingerprint.txt
performance-evidence/development/local-docker/20260715T024833Z-7d532b06e53a/: host-fingerprint.txt  validation-timing.txt
performance-evidence/development/local-docker/20260715T025456Z-8e0cf3d701f0/: host-fingerprint.txt  (+1 more)
scripts/: archive-local-benchmark-reports.sh  benchmark-all-scenarios-isolated.sh  benchmark-all-scenarios.sh  benchmark-baseline.json  benchmark-cross-host-scale-matrix.sh  benchmark-cross-host-wss.sh  benchmark-gate-check.ps1  benchmark-gate-check.sh  benchmark-gateways.ps1  benchmark-gateways.sh  benchmark-helper.go  benchmark-helper_test.go  benchmark-production-scale-matrix.sh  benchmark-report.py  benchmark-ubuntu24-amd64-docker.sh  benchmark-websocket-isolated.sh  benchmark-websocket-production-gate.sh  compare-report.py  install.ps1  install.sh  run-all-verify.ps1  verify-deep.ps1  verify-docker-scenarios.ps1  verify-docker-scenarios.sh  verify-e2e.ps1  verify-embedded-ts.ps1  verify-production-evidence.go  verify-production-evidence_test.go  verify-release.ps1
skills/acme-dns-providers/: SKILL.md
skills/gh-cli/: SKILL.md
skills/gh-cli/agents/: openai.yaml
skills/proxysss-install/: SKILL.md
skills/proxysss-install/agents/: openai.yaml
specs/: embedded-ts-runtime.md
src/: bench.rs  config.rs  demo.rs  gateway.rs  install.rs  main.rs  script.rs  security.rs  sendfile_reactor.rs  stream_reactor.rs  stream_routes.rs  ts_transpile.rs
src/acme/: mod.rs
src/acme/dns/: factory.rs  mod.rs  types.rs  util.rs
src/ai_proxy/: mod.rs
src/filecloud/: auth.rs  mod.rs  path.rs
src/linux_tune/: mod.rs
src/verify/: harness.rs  mod.rs
src/verify/deep/: admin.rs  config.rs  http.rs  mod.rs  security.rs  stream.rs
src/verify/e2e/: http.rs  websocket.rs
templates/: filecloud.example.yaml  gateway.ts  sharefile.html  welcome.html  wildcard-acme.example.yaml
templates/plugins/: ai-api-compat.plugin.yaml  ai-api-compat.ts  geo-headers.ts  player-affinity.ts  structured-log.ts  traffic-stats.ts
(+1776 files in other folders)
