[package]
name = "proxysss"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "General-purpose Rust gateway built to replace nginx with HTTP, HTTPS, HTTP/2, HTTP/3, TCP, UDP, FTP, WebDAV, and script hooks"

[dependencies]
anyhow = "1"
base64 = "0.22"
brotli = "8"
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6"
dirs = "5"
flate2 = "1"
futures = "0.3"
http = "1"
http-body-util = "0.1"
httparse = "1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "server-auto", "service", "tokio"] }
instant-acme = { version = "0.8", features = ["hyper-rustls", "rcgen", "ring"] }
libc = "0.2"
md5 = "0.7"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zstd = "0.13"
rquickjs = "0.12.0"
swc_ts_fast_strip = "52.0.0"
swc_common = { version = "23.0.1", features = ["tty-emitter"] }
